fixed explore pg overflow

--- a/frontend/src/pages/search/Search.scss
+++ b/frontend/src/pages/search/Search.scss
@@ -56,6 +56,10 @@
     border-top: 1px solid #888;
     border-bottom: 1px solid #888;
     padding: 0 14px;
+    width: auto;
+    // overflow-y: scroll;
+    overflow-x: scroll;
+    // white-space: nowrap;
 }
 
 #search_recommendations div {
@@ -106,4 +110,10 @@
 .search_popular-massive span {
     color: #aaa !important;
     font-size: 14px;
+}
+
+@media screen and (min-width: 500px) and (max-width: 700px) {
+    #search_recommendations {
+        width: calc(100vw - 110px);
+    }
 }
